k8s/service.yaml
apiVersion: v1
kind: Service
metadata:

  annotations:
    cloud.google.com/neg: '{"ingress": true}'

  labels:
    app: helloworld
  name: helloworld
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
  type: ClusterIP
