k8s/ingress-for-all-hosts.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    networking.gke.io/managed-certificates: "helloworld-certificate"
    kubernetes.io/ingress.global-static-ip-name: "bootiful-podcast-ip"
  name: helloworld
spec:
  rules:
  - host: bootifulpodcast.online
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 8080
  - host: api.bootifulpodcast.online
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 8080
  - host: studio.bootifulpodcast.online
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 8080
