k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    networking.gke.io/managed-certificates: "helloworld-certificate"
    kubernetes.io/ingress.global-static-ip-name: "bootiful-podcast-ip"

  name: helloworld
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: helloworld
          servicePort: 8080
